[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Animais/Spider.gd" type="Script" id=1]
[ext_resource path="res://Sprites/ChopTable/Spider/AranhaAmarelaBolinhas.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Runa.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[node name="Spider" type="Node2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( -10, 0 )
texture = ExtResource( 2 )

[node name="bunda" type="Area2D" parent="."]
position = Vector2( -48, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bunda"]
shape = SubResource( 1 )

[node name="Runa" type="Sprite" parent="bunda"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="bunda2" type="Area2D" parent="."]
position = Vector2( 48, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bunda2"]
shape = SubResource( 1 )

[node name="Runa" type="Sprite" parent="bunda2"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="presa" type="Area2D" parent="."]
position = Vector2( -37, -57 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="presa"]
shape = SubResource( 1 )

[node name="Runa" type="Sprite" parent="presa"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="presa2" type="Area2D" parent="."]
position = Vector2( 45, -57 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="presa2"]
shape = SubResource( 1 )

[node name="Runa" type="Sprite" parent="presa2"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="pata" type="Area2D" parent="."]
position = Vector2( 91.9999, -27 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pata"]
shape = SubResource( 1 )

[node name="Runa" type="Sprite" parent="pata"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="pata2" type="Area2D" parent="."]
position = Vector2( 95.9999, 31.9999 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pata2"]
shape = SubResource( 1 )

[node name="Runa" type="Sprite" parent="pata2"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
[connection signal="mouse_entered" from="bunda" to="." method="_on_bunda_mouse_entered"]
[connection signal="mouse_entered" from="bunda2" to="." method="_on_bunda2_mouse_entered"]
[connection signal="mouse_entered" from="presa" to="." method="_on_presa_mouse_entered"]
[connection signal="mouse_entered" from="presa2" to="." method="_on_presa2_mouse_entered"]
[connection signal="mouse_entered" from="pata" to="." method="_on_pata_mouse_entered"]
[connection signal="mouse_entered" from="pata2" to="." method="_on_pata2_mouse_entered"]
